made our webpage a website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <hr>
     <strong>Rationale:</strong>
     <p>I <strong>often</strong> eat <em>cheese</em>.</p>
+    <div>
+        <a href="about.html">About Page</a>
+    </div>
+    
     <img src="cheese.jpg"
     style="width:300px;">
     <ol><li>You</li><li>Suck</li><li>If</li><li>You</li><li>Don't</li><li>Like</li><li>cheese</li>
