--- a/index.html
+++ b/index.html
@@ -1,26 +1,153 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>You know you love cheese</title>
-</head>
-<body>
-   <center><h1>I like cheese </h1></center>
-    <center><h2>Do you like cheese?</h2></center>
-    <hr>
-    <strong>Rationale:</strong>
-    <p>I <strong>often</strong> eat <em>cheese</em>.</p>
-    <div>
-        <a href="about.html">About Page</a>
+<html lang="en">
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
+
+    <title>Corey's 2020 Fitness Goals</title>
+  </head>
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="https://www.google.com/search?q=six+pack+ab+workouts&rlz=1C1EKKP_enUS840US840&oq=six+pac&aqs=chrome.1.0j69i59j69i57j0j46j0l3.2171j1j8&sourceid=chrome&ie=UTF-8"><i class="fas fa-dumbbell"></i>Get Inspired</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="recipes.html">Favorite Recipes</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1>Corey's Fitness Plan</h1>
+        <h3>2020</h3>
+        <a class="btn btn-primary btn-lg" href="inputworkout.html" role="button">Log Workout</a>
+      </div>
     </div>
-    
-    <img src="cheese.jpg"
-    style="width:300px;">
-    <ol><li>You</li><li>Suck</li><li>If</li><li>You</li><li>Don't</li><li>Like</li><li>cheese</li>
-    </ol>
-    <a href="https://www.harryanddavid.com/h/gourmet-foods/wine-and-cheese?ref=bing_search_nontm&msclkid=2598b8420c57145f87a2e65481ba9381&utm_source=bing&utm_medium=cpc&utm_campaign=b_nontm_sem_desktop_gourmet%20food%20wine_wine%20cheese_exact&utm_term=best%20cheese&utm_content=best%20-%20charcuterie">Get cheese now</a>
-    <hr>
-    <div>
-    Corey Moss
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>2020 Goals</h1>
         </div>
-</body>
+      </div>  
+      <div class="row">
+        <div class="col-md-12">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item"> <h2> <i class="fas fa-running"></i> Run at least eight miles per week </h2></li>
+            <li class="list-group-item"> <h2> <i class="fas fa-swimmer"></i> Swim at least 150 laps per week or 3750 yards per week</h2></li>
+            <li class="list-group-item"> <h2> <i class="fas fa-weight-hanging"></i> Alternate cardio days with lifting days, focusing on back, shoulders, chest, and legs</h2></li>
+            <li class="list-group-item"> <h2> <i class="fas fa-smile-wink"></i> Don't overdo it!</h2></li>
+          </ul>
+        </div>
+      </div>  
+    </div>
+    <hr>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <H1>Progress</H1>
+        </div>
+      </div>
+      <p></p>  
+      <div class="row">
+        <div class="col-md-9">                 
+            <h2 class="section-title">Running Miles since January 1</h2>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 8%;" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100">8%</div>
+            </div>
+            <div>
+              <p>32 miles so far!</p>
+            </div>
+            <p></p>
+            <h2 class="section-title">Swimming Yards since January 1</h2>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 8%;" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100">8%</div>
+            </div>
+            <div>
+              <p>600 yards so far!</p>
+            </div>
+            <p></p>  
+            <h2 class="section-title">Days at the gym since January 1</h2>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 9%;" aria-valuenow="9" aria-valuemin="0" aria-valuemax="100">9%</div>
+            </div>
+            <div>
+              <p>16 days so far!</p>
+            </div>
+            <p></p>                               
+        </div>
+        <div class="col-md-3">
+          <table class="table">
+            <tr>
+              <th class="th">Miles Left</th>
+              <th class="th">Yards Left</th>
+              <th class="th">Gym Days Left</th>
+            </tr>
+            <tr>
+              <td>368 miles</td>
+              <td>7500 yards</td>
+              <td>178 days</td>
+            </tr>
+            <tr>
+              <td><em>You</em></td>
+              <td><em>can</em></td>
+              <td><em>do it!</em></td>
+            </tr>
+          </table c>
+        </div>
+      </div>
+    </div>  
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Fitness Memories</h1> 
+        </div>
+      </div>
+      <p></p>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="hometown run.jpg">
+        </div>
+        <div class="col-md-4">
+          <img src="spinning class.jpg">
+        </div>
+        <div class="col-md-4">
+          <img src="central park race 1.jpg">
+        </div>    
+      </div>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <p><em>Took a run while in my hometown of Great Neck, NY</em></p>
+        </div>
+        <div class="col-md-4 text-center">
+          <p><em>Did a spinning class in NYC with consulting friends</em></p>
+        </div>
+        <div class="col-md-4 text-center">
+          <p><em>Finished a race with my parents in central park</em></p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
